# Scopic_test

./: .ai  CMakeLists.txt  Notes.txt  README.md
DataProvider/: Ai.cpp  Ai.h  DataProvider.cpp  DataProvider.h  main.cpp
Dependencies/json/include/: json.h
Dependencies/websocketpp-0.8.2/cmake/: websocketpp-config.cmake
StorageApi/: Data.h  StorageHttpServer.cpp  StorageHttpServer.h  main.cpp
TradingAggregator/: ClientHandler.cpp  EndPoint.cpp  EndPoint.h  TradingAggregatorServer.cpp  TradingAggregatorServer.h  main.cpp
TradingBroadcaster/: ClientHandler.cpp  ClientHandler.h  EndPoint.cpp  EndPoint.h  TradingBroadcasterServer.cpp  TradingBroadcasterServer.h  main.cpp
TradingCommon/: DataProviderMessage.cpp  DataProviderMessage.h  Price.cpp  Price.h  StorageHttpClient.cpp  StorageHttpClient.h  Symbol.cpp  Symbol.h  Utils.cpp  Utils.h
env/: TradingAggregator.env  TradingBroadcaster.env
